package ucf.assignments;
/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Veronica Martucci
 */

public class SearchItem {

    public boolean searchByValue(){
        return true;
    }

    public boolean searchByName(){
        return true;
    }

    public boolean searchBySerialNumber(){
        return true;
    }
}

