@startuml

javafx.org.Application <-- Main
Main -- MainWindowController
MainWindowController -- EditItems
MainWindowController -- SortItems
MainWindowController -- SearchItem
MainWindowController -- FileOptions
MainWindowController -- AddItems

class Main{
    main()
    start()
}

class MainWindowController{
    nameTextField: TextField
    sNumberTextField: TextField
    valueTextField: TextField
    searchDisplay: TextField
    itemsTableView: TableView
    itemsValueColumn: TableColumn
    itemsSNumberColumn: TableColumn
    itemsNameColumn: TableColumn
    menuBar: MenuBar
    fileOption: Menu
    helpOption: Menu
    openMenuItem: MenuItem
    saveAsMenuItem: MenuItem
    aboutMenuItem: MenuItem
    fOption: FileOptions
    item: ObservableList<AddItems>
    filteredData: FilteredList<AddItems>

    initialize(URL, ResourceBundle)
    searchButtonClicked()
    addItemButtonClicked()
    deleteItemButtonClicked()
    openButtonCLicked()
    saveAllButtonClicked()
    helpMenuButtonClicked()
    valueEditChange()
    serialNumberEditChange()
    nameEditChange()
    sortByValue()
    sortBySerialNumber()
    sortByName()
}

class AddItems{
    value: SimpleStringProperty
    serialNumber: SimpleStringProperty
    itemName: SimpleStringProperty

    getValue()
    setValue()
    getSerialNumber()
    setSerialNumber()
    getName()
    setName()
}

class EditItems {
    removeItem(TableView<AddItems>)
    editValue(TableColumn<AddItems, String>)
    editName(TableColumn<AddItems, String>)
    editSerialNumber(TableColumn<AddItems, String>)
}

class SortItems{
    sortByValue(TableView<AddItems>, TableColumn<AddItems, String>)
    sortByName(TableView<AddItems>, TableColumn<AddItems, String>)
    sortBySerialNumber(TableView<AddItems>, TableColumn<AddItems, String>)
}

class SearchItem{
    searchByValue()
    searchByName()
    searchBySerialNumber()
}

class FileOptions{
    fc: FileChooser
    desktop: Desktop
    file: File
    fos: FileOutputStream
    ps: PrintStream
    selectedFile: File

    saveFile(TableView<AddItems>, javafx.stage.Window)
    saveAsTSV(File, TableView<AddItems>)
    saveAsHTML(File, TableView<AddItems>)
    saveAsJSON(TableView<AddItems>)
    openFile()
}

@enduml